Update gitignore and dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
-/node_modules
-/dist
-/build
-/logs
-/temp
-/uploads
-/backups
-/cache
-/docs
-/public
-
+node_modules/
 .env
-.env.example
 .env.local
-.env.development
 .env.production
-.env.test
-.env.test.local
-.env.test.production
-.env.test.development
-.env.test.local
-
-
-package-lock.json
+*.log
+.DS_Store
